--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <header>
-        <h1>Setembro Amarelo</h1>
-        <p>Prevenção do Suicídio e Promoção da Saúde Mental</p>
+        <h1></h1>
+        <p></p>
     </header>
 
     <div class="container">
@@ -17,21 +17,20 @@
         </div>
 
         <div class="section">
-            <h2>Estatísticas</h2>
-            <p>Algumas estatísticas relacionadas ao suicídio:</p>
+            <h2></h2>
+            <p></p>
             <ul>
-                <li>Número de casos no mundo: X milhões</li>
-                <li>Taxa de suicídio por faixa etária: XX por 100.000 habitantes</li>
-                <li>Taxa de suicídio por gênero: X por 100.000 homens, X por 100.000 mulheres</li>
+                <li></li>
+                
             </ul>
         </div>
 
         <div class="section">
-            <h2>Recursos de Apoio</h2>
-            <p>Se você ou alguém que você conhece está enfrentando dificuldades, aqui estão alguns recursos de apoio:</p>
+            <h2></h2>
+            <p></p>
             <ul>
-                <li><a href="https://www.cvv.org.br/" target="_blank">Centro de Valorização da Vida (CVV)</a></li>
-                <li><a href="https://www.saude.gov.br/saude-de-a-z/suicidio" target="_blank">Ministério da Saúde - Prevenção do Suicídio</a></li>
+                <li><a href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=64 target="_blank">Núcleo Regional de Educação de Telêmaco Borba</a></li>
+            
                 <!-- Adicione mais links aqui -->
             </ul>
         </div>
