--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <h2>Histórias Inspiradoras</h2>
             <p>Leia algumas histórias inspiradoras de sobreviventes e pessoas que superaram momentos difíceis:</p>
             <ul>
-                <li><a href="#" target="_blank">História 1</a></li>
-                <li><a href="#" target="_blank">História 2</a></li>
+                <li><a href="#" target="_blank">História</a></li>
+              
                 <!-- Adicione mais links para histórias inspiradoras aqui -->
             </ul>
         </div>
