--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>COLEGIO GABRIEL ROSA</title>
+    <h1>Colegio Estadual Professor Gabriel Rosa</h1>
     <style>
     body {
         font-family: Arial, sans-serif;
