--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="container">
         <div class="section">
             <h2>O que é o Setembro Amarelo?</h2>
+            <img src="img/set.jpg"alt="setembro amarelo">
             <p>O Setembro Amarelo é uma campanha de conscientização sobre a prevenção do suicídio. Ele visa alertar a sociedade sobre a importância de cuidar da saúde mental e oferecer apoio a quem precisa.</p>
         </div>
 
