--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
+        height: 100vh;
         background-color: #f0f0f0;
     }
     header {
