--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         background-color: #cecab9;
         text-align: center;
         padding: 20px;
+
    img { 
     position: absolute; /* Define a imagem como posicionamento absoluto em relação ao corpo. */
             top: 50%; /* Move a parte superior da imagem para o centro vertical. */
             left: 50%; /* Move a parte esquerda da imagem para o centro horizontal. */
             transform: translate(-50%, -50%); /* Move a imagem de volta em 50% da sua própria largura e altura para centralizá-la. */
+            max-width: 100%; /* Garante que a imagem não ultrapasse a largura do corpo. */
+            max-height: 100%; /* Garante que a imagem não ultrapasse a altura do corpo. */
         }
    
     
