teste setembro amarelo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         padding: 0;
         height: 100vh;
         background-color: #f0f0f0;
+        background-image: url('img/set.jpg'); /* Caminho para a sua imagem de fundo */
+            background-size: cover; /* Ajusta o tamanho da imagem para cobrir todo o corpo */
+            background-repeat: no-repeat; /* Evita que a imagem de fundo seja repetida */
+            background-attachment: fixed; /* Mantém a imagem de fundo fixa enquanto a página é rolada */
     }
     header {
         background-color: #cecab9;
