site teste setembro amarelo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         margin: 10px auto;
         padding: 20px;
         background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 10px #2f07fae9;
     }
     .section {
         margin-bottom: 20px;
@@ -68,7 +68,7 @@
     <div class="container">
         <div class="section">
           
-            <img class="imagem-de-fundo" src="img/set.jpg" alt="Imagem de Fundo">
+    <img class="imagem-de-fundo" src="img/set.jpg" alt="Imagem de Fundo">
         <div class="texto-sobreposto">
             <h2>O que é o Setembro Amarelo?</h2>
             <p>O Setembro Amarelo é uma campanha de conscientização sobre a prevenção do suicídio. Ele visa alertar a sociedade sobre a importância de cuidar da saúde mental e oferecer apoio a quem precisa.</p>
