site teste setembro amarelo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         margin: 0;
         padding: 0;
         height: 100vh;
-        background-color: #f0f0f0;
+        background-color: #f0f0f0;}
+       
         background-image: url('img/set.jpg'); /* Caminho para a sua imagem de fundo */
             background-size: cover; /* Ajusta o tamanho da imagem para cobrir todo o corpo */
             background-repeat: no-repeat; /* Evita que a imagem de fundo seja repetida */
             background-attachment: fixed; /* Mantém a imagem de fundo fixa enquanto a página é rolada */
-    }
+    
     header {
         background-color: #cecab9;
         text-align: center;
@@ -48,7 +49,7 @@
         margin: 10px auto;
         padding: 20px;
         background-color: #fff;
-        box-shadow: 0 0 10px #2f07fae9;
+        box-shadow: 0 0 10px hsla(255, 2%, 51%, 0.914);
     }
     .section {
         margin-bottom: 20px;
